# python_workshop

./: .gitignore  pyproject.toml
basics/: contexts.ipynb  data_structures.ipynb  exceptions.ipynb  functions.ipynb  oops.ipynb
concurrency/: conditions.py  events.py  futures.py  gathering.py  hello.py  mixing.py  multiprocess.py  multithread.py  tasks.py
data_analysis/: plotnine_book.ipynb  polars_book.ipynb
design_patterns/behavioral/: chain_of_responsibility.py  command.py  iterator.py  memento.py  observer.py  state.py  strategy.py  template_method.py  visitor.py
design_patterns/creational/: abstract_factory.py  builder.py  factory.py  prototype.py  singleton.py  singleton_thread.py
design_patterns/structural/: adapter.py  bridge.py  composite.py  decorator.py  facade.py  flyweight.py  proxy.py
profiling/: cprofile_1.py  line_profiler_1.py  memory_profiler_1.py  time_func.py
sql_alchemy/: sql_alchemy.ipynb  sql_model.ipynb
