[project]
name = "design-patterns-python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "line-profiler>=5.0.0",
    "marimo>=0.18.0",
    "memory-profiler>=0.61.0",
    "notebook>=7.5.0",
    "psutil>=7.1.3",
    "psycopg[binary]>=3.2.12",
    "requests>=2.32.5",
    "snakeviz>=2.2.2",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
]
